# agentic-learning-equities-explainer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RESUMEN_TRABAJO.md  WORK_SUMMARY.md  gameplan.md  test_payload.json
backend/: check_db.py  check_job_details.py  deploy_all_lambdas.py  package_docker.py  pyproject.toml  test_full.py  test_multiple_accounts.py  test_scale.py  test_simple.py  vectorize_me.json  watch_agents.py
backend/api/: lambda_handler.py  main.py  package_docker.py  pyproject.toml
backend/charter/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
backend/database/: pyproject.toml  reset_db.py  run_migrations.py  seed_data.py  test_data_api.py  verify_database.py
backend/database/migrations/: 001_schema.sql
backend/database/src/: __init__.py  audit.py  client.py  models.py  schemas.py
backend/ingest/: cleanup_s3vectors.py  ingest_s3vectors.py  package.py  pyproject.toml  search_s3vectors.py  test_ingest_s3vectors.py  test_search_s3vectors.py
backend/planner/: agent.py  aurora_config.example.json  lambda_handler.py  market.py  observability.py  package_docker.py  prices.py  pyproject.toml  templates.py  (+3 more)
frontend/: package-lock.json
guides/: 1_permissions.md  2_sagemaker.md  3_ingest.md  4_researcher.md  5_database.md  6_agents.md  7_frontend.md  8_enterprise.md  agent_architecture.md  architecture.md
scripts/: deploy.py  destroy.py  pyproject.toml  run_local.py  translate_repo.py  translate_spanish_lines.py
terraform/: README.md  pyproject.toml
(+74 files in other folders)
